--- a/UserInterface/App.xaml
+++ b/UserInterface/App.xaml
@@ -16,10 +16,12 @@
                 <ResourceDictionary Source="Assets/Icons/trashcan.xaml"/>
                 <ResourceDictionary Source="Assets/Icons/wave-sine.xaml"/>
                 <ResourceDictionary Source="Assets/Icons/pencil.xaml"/>
+                <ResourceDictionary Source="Assets/Icons/plus.xaml"/>
                 <ResourceDictionary Source="Assets/Icons/message-question.xaml"/>
                 <ResourceDictionary Source="Assets/Styling/ButtonStyles.xaml"/>
                 <ResourceDictionary Source="Assets/Styling/InputFieldStyles.xaml"/>
                 <ResourceDictionary Source="Assets/Styling/ContentContainerStyles.xaml"/>
+                <ResourceDictionary Source="Assets/Styling/ModalContainerStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
