--- a/UserInterface/Assets/Styling/ButtonStyles.xaml
+++ b/UserInterface/Assets/Styling/ButtonStyles.xaml
@@ -73,10 +73,47 @@
         </Setter>
     </Style>
 
+    <Style x:Key="SecondaryButtonNoBorder" TargetType="{x:Type Button}">
+        <Setter Property="Background" Value="{x:Null}" />
+        <Setter Property="Foreground" Value="Transparent" />
+        <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="FontSize" Value="32"/>
+        <Setter Property="FontWeight" Value="SemiBold"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border 
+                    x:Name="ButtonBorder" 
+                    Height="70"
+                    BorderBrush="Transparent"
+                    Background="Transparent" 
+                    BorderThickness="0" 
+                    CornerRadius="35">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="ButtonBorder" Property="Background" Value="{StaticResource SecondaryBackgroundColor }"/>
+                            <Setter Property="Foreground" Value="{StaticResource PrimaryBackgroundColor}"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="ButtonBorder" Property="BorderBrush" Value="{StaticResource SecondaryBackgroundColor}"/>
+                            <Setter Property="Foreground" Value="{StaticResource SecondaryBackgroundColor}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
     <Style x:Key="SecondaryButton_Icon" BasedOn="{StaticResource SecondaryButton}" TargetType="{x:Type Button}">
         <Setter Property="Width" Value="70" />
     </Style>
 
+    <Style x:Key="SecondaryButton_Icon_NoBorder" BasedOn="{StaticResource SecondaryButtonNoBorder}" TargetType="{x:Type Button}">
+        <Setter Property="Width" Value="70" />
+    </Style>
     <Style x:Key="SecondaryButton_S" BasedOn="{StaticResource SecondaryButton}" TargetType="{x:Type Button}">
         <Setter Property="Width" Value="220" />
     </Style>
