--- a/UserInterface/Assets/Styling/InputFieldStyles.xaml
+++ b/UserInterface/Assets/Styling/InputFieldStyles.xaml
@@ -14,7 +14,8 @@
                             FontSize="32"
                             Background="{x:Null}"
                             BorderBrush="{x:Null}"
-                            VerticalContentAlignment="Center"/>
+                            VerticalContentAlignment="Center"
+                            Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}}"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
@@ -28,7 +29,10 @@
     <Style x:Key="InputField_S" BasedOn="{StaticResource InputField}" TargetType="{x:Type TextBox}">
         <Setter Property="Width" Value="320"/>
     </Style>
-    
+    <Style x:Key="InputField_SM" BasedOn="{StaticResource InputField}" TargetType="{x:Type TextBox}">
+        <Setter Property="Width" Value="410"/>
+    </Style>
+
     <Style x:Key="InputField_M" BasedOn="{StaticResource InputField}" TargetType="{x:Type TextBox}">
         <Setter Property="Width" Value="420"/>
     </Style>
@@ -39,6 +43,9 @@
 
     <Style x:Key="InputField_XL" BasedOn="{StaticResource InputField}" TargetType="{x:Type TextBox}">
         <Setter Property="Width" Value="620"/>
+    </Style>
+    <Style x:Key="InputField_XXL" BasedOn="{StaticResource InputField}" TargetType="{x:Type TextBox}">
+        <Setter Property="Width" Value="820"/>
     </Style>
 
 </ResourceDictionary>
