--- a/UserInterface/Views/Modals/AudioQuestionModal.xaml
+++ b/UserInterface/Views/Modals/AudioQuestionModal.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="UserInterface.Views.Modal"
+﻿<UserControl x:Class="UserInterface.Views.Modals.AudioQuestionModal"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:UserInterface.Views"
-             mc:Ignorable="d">
-    <Border Style="{StaticResource ContentContainer_S}">
+             xmlns:local="clr-namespace:UserInterface.Views.Modals"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800">
+    <Border Style="{StaticResource ContentContainer_M}">
         <Button Style="{StaticResource PrimaryButton_L}" Command="{Binding CloseModalCommand}" CommandParameter="true" Content="Close" />
     </Border>
 </UserControl>
