--- a/UserInterface/Assets/Styling/ListViewStyle.xaml
+++ b/UserInterface/Assets/Styling/ListViewStyle.xaml
@@ -36,7 +36,7 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type ListViewItem}">
+    <Style x:Key="OptionalListViewItemStyle_1" TargetType="{x:Type ListViewItem}">
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="#E6E6E6" />
@@ -54,6 +54,29 @@
                             VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                             Height="100"
                             Width="{TemplateBinding Width}"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style x:Key="OptionalListViewItemStyle_2" TargetType="{x:Type ListViewItem}">
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="Transparent" />
+            </Trigger>
+        </Style.Triggers>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ListViewItem}">
+                    <Border BorderBrush="{TemplateBinding BorderBrush}"
+                        Background="{TemplateBinding Background}"
+                        SnapsToDevicePixels="true">
+                        <GridViewRowPresenter 
+                        HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                        SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                            Height="80"
+                        Width="{TemplateBinding Width}"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
