Save, saving of question works, edditting of values works few things left to do.

--- a/UserInterface/Views/MainWindow.xaml
+++ b/UserInterface/Views/MainWindow.xaml
@@ -34,6 +34,9 @@
             <DataTemplate DataType="{x:Type modalViewModels:ConfirmationModalViewModel}">
                 <modals:ConfirmationModal/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type modalViewModels:AudioQuestionModalViewModel}">
+                <modals:AudioQuestionModal/>
+            </DataTemplate>
         </Grid.Resources>
 
         <Grid.ColumnDefinitions>
