--- a/UserInterface/Assets/Styling/ModalContainerStyles.xaml
+++ b/UserInterface/Assets/Styling/ModalContainerStyles.xaml
@@ -14,10 +14,15 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <Style x:Key="ModalContainer_XS" BasedOn="{StaticResource ContentContainer}" TargetType="{x:Type Border}">
+        <Setter Property="Width" Value="590" />
+        <Setter Property="Height" Value="400" />
+    </Style>
     <Style x:Key="ModalContainer_S" BasedOn="{StaticResource ContentContainer}" TargetType="{x:Type Border}">
         <Setter Property="Width" Value="780" />
         <Setter Property="Height" Value="300" />
     </Style>
+    
     <Style x:Key="ModalContainer_M" BasedOn="{StaticResource ContentContainer}" TargetType="{x:Type Border}">
         <Setter Property="Width" Value="1180" />
         <Setter Property="Height" Value="450" />
