--- a/UserInterface/Views/Modals/AudioQuestionModal.xaml
+++ b/UserInterface/Views/Modals/AudioQuestionModal.xaml
@@ -3,10 +3,32 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:UserInterface.Views.Modals"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Border Style="{StaticResource ContentContainer_M}">
-        <Button Style="{StaticResource PrimaryButton_L}" Command="{Binding CloseModalCommand}" CommandParameter="true" Content="Close" />
+             xmlns:modals="clr-namespace:UserInterface.Views.Modals"
+             mc:Ignorable="d">
+    <Border Style="{StaticResource ModalContainer_XS}">
+        <Grid >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
+            
+            <TextBlock  Grid.Row="0" Grid.Column="0"  Style="{StaticResource Text}" VerticalAlignment="Center" Text="Frequentie" Height="58" Width="auto"/>
+            <TextBox  Grid.Row="0" Grid.Column="1" Text="{Binding Frequency}" Style="{StaticResource InputField_XS}"  ></TextBox>
+            <TextBlock Grid.Row="1" Grid.Column="0" Style="{StaticResource Text}" VerticalAlignment="Center" Text="Start Decibel" Height="58" Width="auto"/>
+            <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding StartingDecibels}" Style="{StaticResource InputField_XS}" ></TextBox>
+            <Button Grid.Row="2" Grid.Column="0" Style="{StaticResource PrimaryButton_S}"
+                        Command="{Binding SaveQuestionCommand}"
+                        CommandParameter="{Binding Id}"
+                        Content="Opslaan"/>
+            <Button Grid.Row="2" Grid.Column="1" Style="{StaticResource SecondaryButton_S}"
+                        Command="{Binding CloseModalCommand}"
+                        CommandParameter="true"
+                        Content="Annuleren" />
+        </Grid>
     </Border>
 </UserControl>
